[package]
name = "print-run"
version = "0.1.0"
edition = "2024"
authors = ["HeyJ0e <heyj0e@tuta.io>"]
description = "A stylish procedural macro for tracing function execution with color, indentation, timestamps, and duration."
license = "MIT"
repository = "https://github.com/HeyJ0e/print-run-rs"
documentation = "https://docs.rs/print-run"
readme = "README.md"
keywords = [
  "macro",
  "debugging",
  "tracing",
  "logging",
  "procedural-macro",
  "print",
]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "macros",
]
exclude = ["/.github", "/assets", "/.devcontainer"]

[lib]
proc-macro = true

[dependencies]
nu-ansi-term = "0.50"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
